# vulkan-engine

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  suppressions.txt
assets/: plane.mtl
assets/character/: character.blend  character.mtl
assets/fonts/: Roboto-Regular.json  charset.txt
assets/terrain/: terrain.blend  terrain.mtl
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  default_lit.frag.spv  text.frag  text.frag.spv  text.vert.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh.vert  tri_mesh.vert.spv  triangle.frag  triangle.vert
src/: main.cpp  player_camera.cpp  player_camera.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_engine.cpp  vk_engine.hpp  vk_fonts.cpp  vk_fonts.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_textures.cpp  vk_textures.hpp  vk_types.hpp  vma_implementation.hpp
src/asset-baker/: asset_main.cpp
src/assetlib/: asset_loader.cpp  asset_loader.hpp  mesh_asset.cpp  mesh_asset.hpp  mesh_asset_impl.hpp  texture_asset.cpp  texture_asset.hpp
src/implementations/: vma_implementation.hpp
src/utils/: logger.cpp  logger.hpp  timer.cpp  timer.hpp
